--- a/MMS_LV04_LZW_algoritam_kodiranja.ipynb
+++ b/MMS_LV04_LZW_algoritam_kodiranja.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "id": "sudden-spotlight",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "id": "incorporate-latvia",
    "metadata": {},
    "outputs": [
@@ -160,6 +160,226 @@
    ],
    "source": [
     "poruka = \"BABAABBACABABB#\"\n",
+    "\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi, kod) = lzw(poruka)\n",
+    "\n",
+    "print(\"\\nRječnik nakon kompresije sadrži sljedeće riječi:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "print(\"\\nKomprimirana poruka je:\")\n",
+    "print(kod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "54e3f98f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "A#\n",
+      "\n",
+      "Rječnik nakon kompresije sadrži sljedeće riječi:\n",
+      "A, B, C\n",
+      "\n",
+      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
+      "1, 2, 3\n",
+      "\n",
+      "Komprimirana poruka je:\n",
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 1\n",
+    "\n",
+    "poruka = \"A#\"\n",
+    "\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi, kod) = lzw(poruka)\n",
+    "\n",
+    "print(\"\\nRječnik nakon kompresije sadrži sljedeće riječi:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "print(\"\\nKomprimirana poruka je:\")\n",
+    "print(kod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "58f8db5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "ABBCBAABCCACBBABBCBBC#\n",
+      "\n",
+      "Rječnik nakon kompresije sadrži sljedeće riječi:\n",
+      "A, B, C, AB, BB, BC, CB, BA, AA, ABC, CC, CA, AC, CBB, BAB, BBC, CBBC\n",
+      "\n",
+      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
+      "1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17\n",
+      "\n",
+      "Komprimirana poruka je:\n",
+      "[1, 2, 2, 3, 2, 1, 4, 3, 3, 1, 7, 8, 5, 14, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 2\n",
+    "\n",
+    "poruka = \"ABBCBAABCCACBBABBCBBC#\"\n",
+    "\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi, kod) = lzw(poruka)\n",
+    "\n",
+    "print(\"\\nRječnik nakon kompresije sadrži sljedeće riječi:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "print(\"\\nKomprimirana poruka je:\")\n",
+    "print(kod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d1c2d107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "ABBABBAABBABBAA#\n",
+      "\n",
+      "Rječnik nakon kompresije sadrži sljedeće riječi:\n",
+      "A, B, C, AB, BB, BA, ABB, BAA, ABBA, ABBAA\n",
+      "\n",
+      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
+      "1, 2, 3, 4, 5, 6, 7, 8, 9, 10\n",
+      "\n",
+      "Komprimirana poruka je:\n",
+      "[1, 2, 2, 4, 6, 7, 9, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 3\n",
+    "\n",
+    "poruka = \"ABBABBAABBABBAA#\"\n",
+    "\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi, kod) = lzw(poruka)\n",
+    "\n",
+    "print(\"\\nRječnik nakon kompresije sadrži sljedeće riječi:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "print(\"\\nKomprimirana poruka je:\")\n",
+    "print(kod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "391114f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "BBBCABBCABBCAB#\n",
+      "\n",
+      "Rječnik nakon kompresije sadrži sljedeće riječi:\n",
+      "A, B, C, BB, BBC, CA, AB, BBCA, ABB, BC, CAB\n",
+      "\n",
+      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
+      "1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11\n",
+      "\n",
+      "Komprimirana poruka je:\n",
+      "[2, 4, 3, 1, 5, 7, 2, 6, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 4\n",
+    "\n",
+    "poruka = \"BBBCABBCABBCAB#\"\n",
+    "\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi, kod) = lzw(poruka)\n",
+    "\n",
+    "print(\"\\nRječnik nakon kompresije sadrži sljedeće riječi:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "print(\"\\nKomprimirana poruka je:\")\n",
+    "print(kod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "00a9420a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "ABBCAABAAAAAAACCCBCC#\n",
+      "\n",
+      "Rječnik nakon kompresije sadrži sljedeće riječi:\n",
+      "A, B, C, AB, BB, BC, CA, AA, ABA, AAA, AAAA, AAC, CC, CCB, BCC\n",
+      "\n",
+      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
+      "1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15\n",
+      "\n",
+      "Komprimirana poruka je:\n",
+      "[1, 2, 2, 3, 1, 4, 8, 10, 8, 3, 13, 6, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 5\n",
+    "\n",
+    "poruka = \"ABBCAABAAAAAAACCCBCC#\"\n",
     "\n",
     "print(\"Izvorna poruka je:\")\n",
     "print(poruka)\n",
@@ -207,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "according-store",
    "metadata": {},
    "outputs": [],
@@ -216,7 +436,7 @@
     "    for item in lst:\n",
     "        if item[1] == vrijednost:\n",
     "            return item[0]\n",
-    "    return None\n",
+    "    return \"\"\n",
     "\n",
     "def reverse_lzw(kod):\n",
     "    \n",
@@ -241,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8b8e4efe",
    "metadata": {},
    "outputs": [],
@@ -273,69 +493,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "7a09e4c2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ulazni kod1 je:\n",
-      "[2, 1, 4, 5, 4, 3, 5, 7]\n",
-      "\n",
-      "Rječnik nakon dekompresije je:\n",
-      "A, B, C, BA, AB, BAA, ABB, BAC, CA, ABA\n",
-      "\n",
-      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
-      "1, 2, 3, 4, 5, 6, 7, 8, 9, 10\n",
-      "\n",
-      "Dekomprimirana poruka1 je:\n",
-      "BABAABBACABABB\n",
-      "\n",
-      "\n",
-      "Ulazni kod2 je:\n",
-      "[1, 2, 2, 4, 6, 7, 9, 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Testing grounds \n",
-    "\n",
-    "kod1 = [2,1,4,5,4,3,5,7]\n",
-    "kod2 = [1,2,2,4,6,7,9,1]\n",
-    "\n",
-    "print(\"Ulazni kod1 je:\")\n",
-    "print(kod1)\n",
-    "\n",
-    "(simboli, kodovi, poruka1) = reverse_lzw(kod1)\n",
-    "\n",
-    "print(\"\\nRječnik nakon dekompresije je:\")\n",
-    "print(\", \".join(map(str, simboli))) \n",
-    "\n",
-    "print(\"\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
-    "print(\", \".join(map(str, kodovi))) \n",
-    "\n",
-    "print(\"\\nDekomprimirana poruka1 je:\")\n",
-    "print(poruka1) \n",
-    "\n",
-    "print(\"\\n\\nUlazni kod2 je:\")\n",
-    "print(kod2)\n",
-    "\n",
-    "(simboli, kodovi, poruka2) = m_reverse_lzw(kod2)\n",
-    "\n",
-    "print(\"\\nRječnik nakon dekompresije je:\")\n",
-    "print(\", \".join(map(str, simboli))) \n",
-    "\n",
-    "print(\"\\n\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
-    "print(\", \".join(map(str, kodovi))) \n",
-    "\n",
-    "print(\"\\nDekomprimirana poruka2 je:\")\n",
-    "print(poruka2)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fifty-comparative",
    "metadata": {},
@@ -345,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "loving-thumbnail",
    "metadata": {},
    "outputs": [
@@ -384,6 +541,150 @@
    "source": [
     "kod1 = [2,1,4,5,4,3,5,7]\n",
     "kod2 = [1,2,2,4,6,7,9,1]\n",
+    "\n",
+    "print(\"Ulazni kod1 je:\")\n",
+    "print(kod1)\n",
+    "\n",
+    "(simboli, kodovi, poruka1) = reverse_lzw(kod1)\n",
+    "\n",
+    "print(\"\\nRječnik nakon dekompresije je:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "print(\"\\nDekomprimirana poruka1 je:\")\n",
+    "print(poruka1) \n",
+    "\n",
+    "print(\"\\n\\nUlazni kod2 je:\")\n",
+    "print(kod2)\n",
+    "\n",
+    "(simboli, kodovi, poruka2) = m_reverse_lzw(kod2)\n",
+    "\n",
+    "print(\"\\nRječnik nakon dekompresije je:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\n\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "print(\"\\nDekomprimirana poruka2 je:\")\n",
+    "print(poruka2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a522af64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ulazni kod1 je:\n",
+      "[1]\n",
+      "\n",
+      "Rječnik nakon dekompresije je:\n",
+      "A, B, C\n",
+      "\n",
+      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
+      "1, 2, 3\n",
+      "\n",
+      "Dekomprimirana poruka1 je:\n",
+      "A\n",
+      "\n",
+      "\n",
+      "Ulazni kod2 je:\n",
+      "[2, 4, 3, 1, 5, 7, 2, 6, 2]\n",
+      "\n",
+      "Rječnik nakon dekompresije je:\n",
+      "A, B, C, BB, BBC, CA, AB, BBCA, ABB, BC, CAB\n",
+      "\n",
+      "\n",
+      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
+      "1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11\n",
+      "\n",
+      "Dekomprimirana poruka2 je:\n",
+      "BBBCABBCABBCAB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 1\n",
+    "kod1 = [1]\n",
+    "kod2 = [2,4,3,1,5,7,2,6,2]\n",
+    "\n",
+    "print(\"Ulazni kod1 je:\")\n",
+    "print(kod1)\n",
+    "\n",
+    "(simboli, kodovi, poruka1) = reverse_lzw(kod1)\n",
+    "\n",
+    "print(\"\\nRječnik nakon dekompresije je:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "print(\"\\nDekomprimirana poruka1 je:\")\n",
+    "print(poruka1) \n",
+    "\n",
+    "print(\"\\n\\nUlazni kod2 je:\")\n",
+    "print(kod2)\n",
+    "\n",
+    "(simboli, kodovi, poruka2) = m_reverse_lzw(kod2)\n",
+    "\n",
+    "print(\"\\nRječnik nakon dekompresije je:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\n\\nKodovi za gore navedene riječi u respektivnom poretku su:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "print(\"\\nDekomprimirana poruka2 je:\")\n",
+    "print(poruka2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bc92b766",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ulazni kod1 je:\n",
+      "[1, 2, 2, 3, 2, 1, 4, 3, 3, 1, 7, 8, 5, 14, 3]\n",
+      "\n",
+      "Rječnik nakon dekompresije je:\n",
+      "A, B, C, AB, BB, BC, CB, BA, AA, ABC, CC, CA, AC, CBB, BAB, BBC, CBBC\n",
+      "\n",
+      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
+      "1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17\n",
+      "\n",
+      "Dekomprimirana poruka1 je:\n",
+      "ABBCBAABCCACBBABBCBBC\n",
+      "\n",
+      "\n",
+      "Ulazni kod2 je:\n",
+      "[1, 2, 2, 3, 1, 4, 8, 10, 8, 3, 13, 6, 3]\n",
+      "\n",
+      "Rječnik nakon dekompresije je:\n",
+      "A, B, C, AB, BB, BC, CA, AA, ABA, AAA, AAAA, AAC, CC, CCB, BCC\n",
+      "\n",
+      "\n",
+      "Kodovi za gore navedene riječi u respektivnom poretku su:\n",
+      "1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15\n",
+      "\n",
+      "Dekomprimirana poruka2 je:\n",
+      "ABBCAABAAAAAAACCCBCC\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 2\n",
+    "kod1 = [1,2,2,3,2,1,4,3,3,1,7,8,5,14,3]\n",
+    "kod2 = [1,2,2,3,1,4,8,10,8,3,13,6,3]\n",
     "\n",
     "print(\"Ulazni kod1 je:\")\n",
     "print(kod1)\n",
