--- a/MMS_LV05_Fourierovi_redovi.ipynb
+++ b/MMS_LV05_Fourierovi_redovi.ipynb
@@ -76,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "northern-rochester",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fb8c629f210>]"
+       "[<matplotlib.lines.Line2D at 0x7fde9538fa10>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "supreme-there",
    "metadata": {},
    "outputs": [],
@@ -330,11 +330,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "romance-polyester",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def f_rekonstrukcija(k,f, a0, an, bn, start, end, step):\n",
+    "\n",
+    "    x = np.arange(start, end+step, step)\n",
+    "    y = []\n",
+    "\n",
+    " \n",
+    "    for xi in x:\n",
+    "\n",
+    "        suma = 0\n",
+    "        for i in range(k):\n",
+    "            suma += an[i]*math.cos((i+1)*xi) + bn[i]*math.sin((i+1)*xi)\n",
+    "\n",
+    "        rekonstruirana_vrijednost = a0 + suma\n",
+    "        y.append(rekonstruirana_vrijednost)\n",
+    "\n",
+    "    return x,y"
+   ]
   },
   {
    "cell_type": "markdown",
