--- a/MMS_LV05_Fourierovi_redovi.ipynb
+++ b/MMS_LV05_Fourierovi_redovi.ipynb
@@ -76,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 140,
    "id": "northern-rochester",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fde77a82b50>]"
+       "[<matplotlib.lines.Line2D at 0x7fde7723d790>]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 141,
    "id": "supreme-there",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 142,
    "id": "changed-floor",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50\n",
       "Koeficijent a01 iznosi 1.5\n",
       "\n",
       "Koeficijenti ai1 su: \n",
@@ -328,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 143,
    "id": "romance-polyester",
    "metadata": {},
    "outputs": [],
@@ -362,17 +361,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 144,
    "id": "figured-consent",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fde778fb490>]"
+       "[<matplotlib.lines.Line2D at 0x7fde770ce2d0>]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -418,17 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 145,
    "id": "b2b3dd30",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fde7744dd50>]"
+       "[<matplotlib.lines.Line2D at 0x7fde76defed0>]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     },
